ported SpaceNode